Finished Top Nav

--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Ocean</title>
-    
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Digital  Ocean</title>
 </head>
 <body>
+    <header>
+        <nav class="top-nav">
+            <a class="logo-container">
+                <img src="img/logo.png" alt="Digital Ocean Logo">
+            </a>
+            <ul class="link-section company-pages">
+                <li>
+                    <select class="top-link drop-down"  name="products" id="">
+                        <option value="" disabled selected>Products</option>
+                        <option value="blah">blah</option>
+                        <option value="blah">blah</option>
+                    </select>
+                </li>
+                <li><a href="#" class="top-link careers">Careers</a>
+                </li>
+                <li>
+                    <select class="top-link drop-down" name="community" id="community">
+                        <option value=""  disabled selected>Community</option>
+                        <option value="blah">blah</option>
+                        <option value="blah">blah</option>
+                    </select>
+                </li>
+                <li><a href="#" class="top-link pricing">Pricing</a>
+                </li>
+            </ul>
+            <ul class="link-section account-pages">
+                <li>
+                    <a href="#" class="top-link home">Home</a>
+                </li>
+                <li>
+                    <select class="top-link drop-down" name="support" id="support">
+                        <option  value="" disabled selected>Support</option>
+                        <option value="blah">blah</option>
+                        <option value="blah">blah</option>
+                    </select>
+                </li>
+                <li>
+                    <a href="#" class="top-link login">Log In</a>
+                </li>
+                <li class="sign-up">
+                    <a href="#" class="top-link">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
