--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Digital  Ocean</title>
+    <title>DigitalOcean</title>
 </head>
 <body>
-    <header class="wrapper">
-        <nav class="top-nav">
+    <header class="">
+        <nav class="top-nav wrapper">
             <a class="logo-container">
                 <img src="img/logo.png" alt="Digital Ocean Logo">
             </a>
@@ -89,9 +89,8 @@
                 </div>
 
             </div>
-<!-- 
+
             <video src="https://prismic-io.s3.amazonaws.com/www-static/26b7df03-78fd-4b9e-a563-ab819b413323_business-bg-video-03-2021.mp4" autoplay="" loop="" muted="" poster="https://images.prismic.io/www-static/15f8a65d-e9d2-466d-a76d-5de3e4bd433e_business-video-placeholder.jpg?auto=compress,format" class="background-video"></video>
-             -->
         </section>
         <section class="partners wrapper">
             
